[gd_scene load_steps=6 format=3 uid="uid://bk2ljowoyy8cq"]

[ext_resource type="Script" path="res://baby_changing_station.gd" id="1_jrn51"]
[ext_resource type="Texture2D" uid="uid://xgcwavswjihc" path="res://assets/gray_bg.png" id="2_36nj0"]
[ext_resource type="Texture2D" uid="uid://ccqtfas7kpm8t" path="res://baby.png" id="3_lky3y"]
[ext_resource type="Texture2D" uid="uid://cf7enixisf8a5" path="res://background 2.jpg" id="3_uix4k"]
[ext_resource type="Texture2D" uid="uid://got2lxnbjvie" path="res://assets/change_diaper.png" id="4_at2y7"]

[node name="baby changing station" type="Node2D"]
script = ExtResource("1_jrn51")

[node name="GrayBg" type="Sprite2D" parent="."]
position = Vector2(287.841, 324.841)
scale = Vector2(0.574318, 0.648318)
texture = ExtResource("2_36nj0")

[node name="Background2" type="Sprite2D" parent="."]
visible = false
position = Vector2(288, 324)
scale = Vector2(0.533333, 0.9)
texture = ExtResource("3_uix4k")

[node name="Baby" type="Sprite2D" parent="."]
position = Vector2(233, 293)
rotation = -1.8134
scale = Vector2(1.12918, 1.12918)
texture = ExtResource("3_lky3y")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(205, 370)
scale = Vector2(0.578125, 0.578125)
texture = ExtResource("4_at2y7")

[node name="Button" type="Button" parent="Icon"]
modulate = Color(1, 1, 1, 0)
offset_left = -64.0
offset_top = -64.0
offset_right = 66.0
offset_bottom = 64.0

[node name="Icon2" type="Sprite2D" parent="."]
position = Vector2(393, 412)
scale = Vector2(0.578125, 0.578125)
texture = ExtResource("4_at2y7")

[node name="Button2" type="Button" parent="Icon2"]
auto_translate_mode = 1
modulate = Color(1, 1, 1, 0)
offset_left = -64.0
offset_top = -64.0
offset_right = 66.0
offset_bottom = 64.0

[node name="Icon3" type="Sprite2D" parent="."]
visible = false
position = Vector2(283, 470)
scale = Vector2(0.578125, 0.578125)
texture = ExtResource("4_at2y7")

[node name="Button3" type="Button" parent="Icon3"]
auto_translate_mode = 1
modulate = Color(1, 1, 1, 0)
offset_left = -64.0
offset_top = -64.0
offset_right = 66.0
offset_bottom = 64.0

[node name="Icon4" type="Sprite2D" parent="."]
visible = false
position = Vector2(302, 379)
scale = Vector2(0.578125, 0.578125)
texture = ExtResource("4_at2y7")

[node name="Button4" type="Button" parent="Icon4"]
auto_translate_mode = 1
modulate = Color(1, 1, 1, 0)
offset_left = -64.0
offset_top = -64.0
offset_right = 66.0
offset_bottom = 64.0

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="Label" type="Label" parent="."]
offset_left = 30.0
offset_top = 41.0
offset_right = 392.0
offset_bottom = 99.0
theme_override_font_sizes/font_size = 40
text = "Change the diaper!"
horizontal_alignment = 1

[connection signal="pressed" from="Icon/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Icon2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Icon3/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Icon4/Button4" to="." method="_on_button_4_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
